# core

./: Cargo.toml  Makefile  README.md  TODO.md
costs-derive/: Cargo.toml
costs-derive/src/: lib.rs
examples/: create_new_user_and_company.rs
src/: access.rs  costs.rs  error.rs  lib.rs  voter.rs
src/models/: account.rs  agent.rs  agreement.rs  amortization.rs  bank.rs  commitment.rs  company.rs  company_member.rs  cost_tag.rs  costs.rs  currency.rs  event.rs  intent.rs  labor.rs  member.rs  mod.rs  occupation.rs  order.rs  process.rs  process_spec.rs  product.rs  region.rs  resource.rs  resource_group.rs  resource_group_link.rs  resource_spec.rs  resource_tag.rs  user.rs
src/models/lib/: agent.rs  basis_model.rs  mod.rs
src/system/: credit_converter.rs  mod.rs  ubi.rs  vote.rs
src/transactions/: account.rs  agreement.rs  commitment.rs  company.rs  company_member.rs  currency.rs  event.rs  intent.rs  member.rs  mod.rs  occupation.rs  process.rs  process_spec.rs  region.rs  resource.rs  resource_spec.rs  user.rs
src/transactions/event/: accounting.rs  consume.rs  delivery.rs  mod.rs  modification.rs  produce.rs  production.rs  service.rs  transfer.rs  use.rs  work.rs
src/util/: measure.rs  mod.rs  number.rs  test.rs  time.rs
