[workspace]
members = ["costs-derive"]

[package]
name = "basis-core"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "The core datastructures, algorithms, and logic for the Basis system"
homepage = "https://basisproject.gitlab.io/public/"
repository = "https://gitlab.com/basisproject/core"
readme = "README.md"
keywords = ["economics", "socialism", "communism", "democracy"]
categories = ["algorithms", "data-structures"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
costs-derive = { path = "./costs-derive" }
derive_builder = "0.9"
getset = "0.1"
om2 = "0.1"
rust_decimal = { version = "1.6", features = ["serde-float"] }
rust_decimal_macros = "1.6"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
vf-rs = { version = "0.3.15", default-features = false, features = ["getset_getmut", "getset_setters"] }

[dev-dependencies]
serde_json = "1.0"

